[gd_scene load_steps=4 format=3 uid="uid://crnst437b1x0d"]

[ext_resource type="Script" uid="uid://encdgmlv4n6" path="res://slide/SlideManager.gd" id="1_0hnvx"]
[ext_resource type="Script" uid="uid://xkdd3kx6u1dq" path="res://slide/CameraDirector.gd" id="2_1hnvy"]
[ext_resource type="Script" uid="uid://dosjtv7qpb2ri" path="res://slide/MainScene.gd" id="3_2hnvz"]

[node name="Main" type="Node3D"]
script = ExtResource("3_2hnvz")

[node name="SlideManager" type="Node3D" parent="."]
script = ExtResource("1_0hnvx")

[node name="Camera3D" type="Camera3D" parent="SlideManager"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 5, 10)
fov = 45.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SlideManager"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 8, 0)
shadow_enabled = true

[node name="Environment" type="Node3D" parent="SlideManager"]

[node name="SlideContainer" type="Node3D" parent="SlideManager"]

[node name="CameraDirector" type="Node3D" parent="SlideManager"]
script = ExtResource("2_1hnvy")
